feat(endpoints): :art: WIP - Adiciona melhorias nos endpoints e validacoes - Adiciona atualizacoes no contrato
